--- a/webRunes-WRIO-Hub/Alexey-Anshakov.html
+++ b/webRunes-WRIO-Hub/Alexey-Anshakov.html
@@ -9,6 +9,7 @@
     <meta name="keywords" content="story, cat">
     <title>Alexey Anshakov</title>
 
+    //cover
     <script type="application/ld+json">
     {
         "@context": "http://schema.org",
@@ -25,7 +26,66 @@
         ]
         }
     </script>
-
+    //article
+    <script type="application/ld+json">
+        {
+        "@context": "http://schema.org",
+        "@type": "Article",
+        "inLanguage": "en-US",
+        "keywords": "keyword1, keyword2, keyword3",
+        "author": "http://alexey-anshakov.webrunes.com",
+        "editor": "",
+        "name": "The story of the cat",
+        "about": "Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.",
+        "articleBody": [
+        "Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.",
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.",
+        "Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum."
+        ],
+        "hasPart": [
+        {
+        "@type": "Article",
+        "name": "Chapter 1",
+        "articleBody": [
+        "Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam."
+        ]
+        },
+        {
+        "@type": "Article",
+        "name": "Chapter 2",
+        "about": "Description",
+        "url": "http://domainname3.com/url3.htm"
+        }
+        ],
+        "mentions": [
+        {
+        "@type": "Article",
+        "name": "First url title",
+        "about": "Text inside the ticket popup.",
+        "url": "http://webrunes.com/blog.htm?'dolor sit amet':1,104"
+        },
+        {
+        "@type": "Article",
+        "name": "About domainname",
+        "about": "Text inside the ticket popup.",
+        "url": "http://domainname.com/url.htm?'Fusce':2,214"
+        },
+        {
+        "@type": "Article",
+        "name": "Title of the link",
+        "about": "Text inside the ticket popup.",
+        "url": "http://webrunes.com/url.htm?'Class aptent':2,305"
+        },
+        {
+        "@type": "Article",
+        "name": "Title",
+        "about": "Text inside the ticket popup.",
+        "url": "http://webrunes.com/url.htm?'Sed lacinia':4,211"
+        }
+        ]
+        }
+    </script>
+    //itemlist cover
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
@@ -97,68 +157,7 @@
         ]
         }
     </script>
-
-
-
-    <script type="application/ld+json">
-        {
-        "@context": "http://schema.org",
-        "@type": "Article",
-        "inLanguage": "en-US",
-        "keywords": "keyword1, keyword2, keyword3",
-        "author": "http://alexey-anshakov.webrunes.com",
-        "editor": "",
-        "name": "The story of the cat",
-        "about": "Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.",
-        "articleBody": [
-        "Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.",
-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.",
-        "Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum."
-        ],
-        "hasPart": [
-        {
-        "@type": "Article",
-        "name": "Chapter 1",
-        "articleBody": [
-        "Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam."
-        ]
-        },
-        {
-        "@type": "Article",
-        "name": "Chapter 2",
-        "about": "Description",
-        "url": "http://domainname3.com/url3.htm"
-        }
-        ],
-        "mentions": [
-        {
-        "@type": "Article",
-        "name": "First url title",
-        "about": "Text inside the ticket popup.",
-        "url": "http://webrunes.com/blog.htm?'dolor sit amet':1,104"
-        },
-        {
-        "@type": "Article",
-        "name": "About domainname",
-        "about": "Text inside the ticket popup.",
-        "url": "http://domainname.com/url.htm?'Fusce':2,214"
-        },
-        {
-        "@type": "Article",
-        "name": "Title of the link",
-        "about": "Text inside the ticket popup.",
-        "url": "http://webrunes.com/url.htm?'Class aptent':2,305"
-        },
-        {
-        "@type": "Article",
-        "name": "Title",
-        "about": "Text inside the ticket popup.",
-        "url": "http://webrunes.com/url.htm?'Sed lacinia':4,211"
-        }
-        ]
-        }
-    </script>
-
+    //itemlist itemlist
     <script type="application/ld+json">
         {
         "@context": "http://schema.org",
